test/frontend/fail/overload_variable.osl
void foo() {}
float foo() { return 1.; }
float foo;
shader baz() {}
